<resources>
    <string name="app_name">ConstraintLayoutExample</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="don_t_remember_password">Don\'t Remember Password?</string>
    <string name="or_login_with">Or Login With</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have An Account ? </string>
    <string name="welcome">Welcome</string>
    <string name="signup">SignUp</string>
</resources>